FIX: redis client fixture 추가 및 옵션 수정

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -rsxX -v --basetemp=/tmp/.pytest_tmp
-redis_exec = /usr/local/bin/redis-server
+;redis_exec = /usr/local/bin/redis-server
 ;mysql_mysqld = /usr/local/opt/mysql@5.7/bin/mysqld
 ;mysql_mysqld_safe = /usr/local/opt/mysql@5.7/bin/mysqld_safe
 ;mysql_install_db = /usr/local/opt/mysql@5.7/bin/mysql_install_db
