--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: python
 services:
   - redis-server
   - mysql
+  - docker
 
 python:
   - "3.7"
@@ -18,6 +19,17 @@ script:
 
 after_success:
   - codecov
+
+deploy:
+  - provider: script
+    script: bash docker_deploy.sh
+    on:
+      branch: master
+
+  - provider: script
+    script: bash docker_deploy.sh
+    on:
+      branch: dev
 
 
 
