--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
       branch: master
 
   - provider: script
-    script: bash ./docker_deploy.sh
+    script: bash ./docker-deploy.sh
     on:
       branch: dev
 
