--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,6 @@ sonar.links.issue=https://github.com/entrydsm/hermes/issues
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
+sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.exclusions=tests/*
