ADD: coverage check to sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,5 @@ sonar.links.issue=https://github.com/entrydsm/hermes/issues
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.exclusions=tests/*
+
+sonar.python.coverage.reportPath=coverage.xml
