--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,4 +17,4 @@ sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.exclusions=tests/*
 
-sonar.python.coverage.reportPath=coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
